Added create user form

--- a/mysite/myapp/templates/myapp/person_detail.html
+++ b/mysite/myapp/templates/myapp/person_detail.html
@@ -18,7 +18,7 @@
                 <li>{{ object.favorite_artist }}</li>
                 <li>{{ object.birthday }}</li>
                 <li>{{ object.zodiac_sign }}</li>
-                <li>{{ object.profile_picture }}</li>
+                <li><img src="{{ object.profile_picture.url }}" width="300"/></li>
                 <li>{{ object.mbti }}</li>
                 <li>{{ object.iq }}</li>
                 <li>{{ object.blood_type }}</li>
